CHANGES from 3.7.4 onwards

=== release 3.7.5 (under construction)
- #361 Individuals without roles not shown in call list
- #365 = E41: correct use of AND between keyword lists